(lang dune 3.11)

(name aoc23)

(generate_opam_files true)

(source
 (github b00a4gl/AOC23))

(authors "Balaji Arumugam")

(maintainers "b0a04gl")

(license MIT)


(package
 (name aoc23)
 (synopsis "Advent Of Code 2023 edition")
 (description "Upsolve problems") 
 (depends ocaml dune)
 (tags
  (topics "aoc23" aoc23))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
